--- a/templates/dashboard/tickets.html
+++ b/templates/dashboard/tickets.html
@@ -145,7 +145,9 @@
             <div class="flex justify-between items-center">
                 <h2 class="text-gray-900 text-lg font-semibold font-['Inter']">Tickets Overview</h2>
                 <button id="openCreateTicketModal" class="h-10 w-40 bg-sky-600 rounded-lg text-white flex items-center justify-center gap-2 hover:bg-sky-700 transition-colors">
-                    <img src="{% static 'images/tickets/plus.svg' %}" alt="Create Ticket Icon"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
+          </svg>
                     <span>Create Ticket</span>
                 </button>
             </div>
